@@ -57,6 +57,8 @@
     <org.exoplatform.calendar.version>4.1.x-SNAPSHOT</org.exoplatform.calendar.version>
     <!-- Platform Project 3rd party Dependencies -->
     <org.exoplatform.doc.doc-style.version>4.1.x-SNAPSHOT</org.exoplatform.doc.doc-style.version>
+    <!-- For surefire and failsafe to be compatible with jacoco -->
+    <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
   </properties>
   <dependencyManagement>
     <!-- ### NEVER CHANGE THIS ORDER OF DEPMGT ### -->
